--- a/static/css/main.css
+++ b/static/css/main.css
@@ -182,3 +182,16 @@ p {
         margin-left: 0;
     }
 }
+
+@media (max-width: 600px) {
+    .kontakt-text {
+        width: 100%;
+        box-sizing: border-box;
+        padding: 1.2rem 1.5rem;
+        font-size: 1rem;
+    }
+
+    .kontakt h1 {
+        font-size: 2rem;
+    }
+}
